--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,14 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/semantic-ui-css/semantic.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.slim.min.js",
+              "node_modules/popper.js/dist/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -74,7 +78,6 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               
-              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
