--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
+    "random-number": "0.0.9",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
